welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: value &&
  if (!estFaceMur())&& (getCouleurSol==Color.green){
                    ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (!estFaceMur())&& (getCouleurSol==Color.green){
  ^